plugin/src/test/resources/io/jenkins/plugins/analysis/warnings/steps/affected-files/javalog-2.txt
FingerprintITest.java:7: error: cannot find symbol
        System.out.println(m);
                           ^
  symbol:   variable m
  location: class FingerprintITest
